fdo#82859 RTF import: don't try to set CustomShapeGeometry on a TextFrame

(cherry picked from commit 6b7239855d8babdc1bcc7742f79ce2df64d1e476)

Conflicts:
	writerfilter/source/rtftok/rtfsdrimport.cxx

Change-Id: I687fa609559f0484fe6bb804265243de154c3760